Ubicar filtro en la grilla de gestión de artículos
